--- a/portfolio/json/project.json
+++ b/portfolio/json/project.json
@@ -46,7 +46,7 @@
     "category": "mern",
     "links": {
       "view": "#",
-      "code": "#"
+      "code": "https://github.com/Shashwat27sri/Enord-Community-MERN"
     }
   },
   {
@@ -56,7 +56,7 @@
     "category": "basicweb",
     "links": {
       "view": "#",
-      "code": "#"
+      "code": "https://github.com/Shashwat27sri/Open_Source_Library"
     }
   },
   {   
@@ -65,7 +65,7 @@
     "image": "portfolio",
     "category": "basicweb",
     "links": {
-      "view": "#",
+      "view": "https://portfolioshashwat.000webhostapp.com/",
       "code": "#"
     }
   },
@@ -76,7 +76,7 @@
     "category": "frontend-web",
     "links": {
       "view": "#",
-      "code": "#"
+      "code": "https://github.com/Shashwat27sri/Nykaa_Clown"
     }
   },
   
