add design projects

--- a/portfolio/json/project.json
+++ b/portfolio/json/project.json
@@ -1,42 +1,42 @@
 [
   {
-    "name": "#",
-    "desc": "#",
-    "image": "notystackandroid",
+    "name": "Social Media- GermanLeap ",
+    "desc": "Instagram post Design For GermanLeap ",
+    "image": "Germanleap",
     "category": "graphicDesign",
     "links": {
-      "view": "#",
-      "code": "#"
+      "view": "https://www.canva.com/design/DAF7uPY5nGI/iTWBHlnYzDTfVzVRhoMrCA/view?utm_content=DAF7uPY5nGI&utm_campaign=designshare&utm_medium=link&utm_source=editor",
+      "code": "https://www.canva.com/design/DAF7uPY5nGI/iTWBHlnYzDTfVzVRhoMrCA/view?utm_content=DAF7uPY5nGI&utm_campaign=designshare&utm_medium=link&utm_source=editor"
     }
   },
   {
-    "name": "#",
-    "desc": "#",
-    "image": "sppuprepandroid",
+    "name": "Print Media - Delhi Landscape ",
+    "desc": " Flyer Design for Delhi Landscape Innovation ",
+    "image": "DelhiLandscape",
     "category": "graphicDesign",
     "links": {
-      "view": "#",
-      "code": "#"
+      "view": "https://www.canva.com/design/DAF8wKlKaMY/wKKnCt99ky509utQIdOI-A/view?utm_content=DAF8wKlKaMY&utm_campaign=designshare&utm_medium=link&utm_source=editor",
+      "code": "https://www.canva.com/design/DAF8wKlKaMY/wKKnCt99ky509utQIdOI-A/view?utm_content=DAF8wKlKaMY&utm_campaign=designshare&utm_medium=link&utm_source=editor"
     }
   },
   {
-    "name": "#",
-    "desc": "#",
-    "image": "newsboxandroid",
+    "name": "Magzine Design",
+    "desc": "Magzine Design for 2024 Proposal",
+    "image": "magzineProposal",
     "category": "graphicDesign",
     "links": {
-      "view": "#",
-      "code": "#"
+      "view": "https://www.canva.com/design/DAF8qsguhmM/FvQkYbGz3FH7BGcW4mtUog/view?utm_content=DAF8qsguhmM&utm_campaign=designshare&utm_medium=link&utm_source=editor",
+      "code": "https://www.canva.com/design/DAF8qsguhmM/FvQkYbGz3FH7BGcW4mtUog/view?utm_content=DAF8qsguhmM&utm_campaign=designshare&utm_medium=link&utm_source=editor"
     }
   },
   {
-    "name": "#",
-    "desc": "#",
-    "image": "weatherlyandroid",
+    "name": "Comic Design",
+    "desc": "A Comic Series for Champak Magzine - Aaj Kitna Acha Din Hai",
+    "image": "achaDinComic",
     "category": "graphicDesign",
     "links": {
-      "view": "#",
-      "code": "#"
+      "view": "https://www.canva.com/design/DAF9m1JBaiQ/KODUG8SslE7v4IFBe7CwwQ/view?utm_content=DAF9m1JBaiQ&utm_campaign=designshare&utm_medium=link&utm_source=editor",
+      "code": "https://www.canva.com/design/DAF9m1JBaiQ/KODUG8SslE7v4IFBe7CwwQ/view?utm_content=DAF9m1JBaiQ&utm_campaign=designshare&utm_medium=link&utm_source=editor"
     }
   },
   {
